--- a/_includes/social.html
+++ b/_includes/social.html
@@ -9,5 +9,8 @@
     {% if site.linkedin %}
 	  <a href="http://linkedin.com/in/{{ site.linkedin }}"><i class="fa fa-linkedin"></i></a>
     {% endif %}
+    {% if site.linkedin %}
+	  <a href="https://www.facebook.com/profile.php?id=100003239787370"><i class="fa fa-facebook"></i></a>
+    {% endif %}
 	</h4>
 </div>
