--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,19 +4,14 @@
   <div class="panel panel-default">
     <div class="panel-body">
 		<h5>
-			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="#">Project 1</a></strong>
-			- Ei viderer tacimates pro, quem assum ea nam. Veritus omnesque eam te. Et natum mucius tamquam vel,
-			ea dolorem volumus deterruisset nec. Graeci mentitum sea an, eu prima elaboraret est.
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="">Quantification of esophagus imaging with Optical Coherence Tomography</a></strong>
+			This is my graduate research thesis, used denosing method and edge detection algorithm to detected the contour of esophagus and computing the area of esophagus base on the contour.
 		</h5>
 		<h5>
-			<i class="fa fa-globe"></i>&nbsp;&nbsp;<strong><a href="#">Project 5</a></strong>
-			- Dicta causae meliore ex vel, in vix erant integre petentium. Vix ei nisl scripta recusabo,
-			eam doming blandit facilisis.
-		</h5>
-		<h5>
-			<i class="fa fa-cog"></i>&nbsp;&nbsp;<strong><a href="#">Project 6</a></strong>
-			- Inermis recusabo elaboraret mea et, dicat neglegentur vim te. Nec et sanctus scriptorem,
-			usu ex sapientem gubergren. Tamquam admodum ei usu.
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/yu-zhengyu/CookBootCamp_Android_FinalPro">Cook Boot Camp</a></strong>
+			This is course project for Java smart phone development. 
+			<br/>Implemented Web Server by using java socket, which can interact with Android device and MySQL database.
+			<br/>•	Used Android Studio develop the Android client. including features: sign in, sign out, upload information, upload image, searching user by GPS.
 		</h5>
     </div>
   </div>
