--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -5,12 +5,12 @@
     <div class="panel-body">
 		<h5>
 			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="">Quantification of esophagus imaging with Optical Coherence Tomography</a></strong>
-			This is my graduate research thesis, used denosing method and edge detection algorithm to detected the contour of esophagus and computing the area of esophagus base on the contour.
+			<br/>This is my graduate research thesis, used denosing method and edge detection algorithm to detected the contour of esophagus and computing the area of esophagus base on the contour.
 		</h5>
 		<h5>
 			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/yu-zhengyu/CookBootCamp_Android_FinalPro">Cook Boot Camp</a></strong>
-			This is course project for Java smart phone development. 
-			<br/>Implemented Web Server by using java socket, which can interact with Android device and MySQL database.
+			<br/>This is course project for Java smart phone development. 
+			<br/>•  Implemented Web Server by using java socket, which can interact with Android device and MySQL database.
 			<br/>•	Used Android Studio develop the Android client. including features: sign in, sign out, upload information, upload image, searching user by GPS.
 		</h5>
     </div>
