--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -13,6 +13,14 @@
 			<br/>•  Implemented Web Server by using java socket, which can interact with Android device and MySQL database.
 			<br/>•	Used Android Studio develop the Android client. including features: sign in, sign out, upload information, upload image, searching user by GPS.
 		</h5>
+		<h5>
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/yu-zhengyu/Web-Crawler-python">Web Crawler using python</a></strong>
+			<br/>This is a course project for Coding Boot Camp. We developed a topic-specific web crawler that will crawl the web looking for information on a specific topic. 
+		</h5>
+		<h5>
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/yu-zhengyu/ShadowMaster">Game: Shadow Master</a></strong>
+			<br/>This project is a game project which prepare for Imagine Cup, a game which holded by Microsoft, This project can use webcam simulate the shadow of humnan's hand.
+		</h5>
     </div>
   </div>
 </div>
