--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,6 +4,11 @@
   <div class="panel panel-default">
     <div class="panel-body">
 		<h5>
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="">Big Data Analysis from Wkipedia</a></strong>
+			<br/>• Used AWS Elastic Map Reduce(EMR) to do analysis on a 65GB dataset of Wikipedia log.
+			<br/>• Implemented code of mapper and reducer, which ran on Hadoop, to do filtering and to aggregate view counts of Wikipedia pages based on result got from EMR.
+		</h5>
+		<h5>
 			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="">Quantification of esophagus imaging with Optical Coherence Tomography</a></strong>
 			<br/>This is my graduate research thesis, used denosing method and edge detection algorithm to detected the contour of esophagus and computing the area of esophagus base on the contour.
 			<br/>• Implemented the denosing method and edge detection algorithm.
