--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,7 +4,7 @@
   <div class="panel panel-default">
     <div class="panel-body">
 		<h5>
-			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="">Big Data Analysis from Wkipedia</a></strong>
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="">Big Data Analysis from Wikipedia</a></strong>
 			<br/>• Used AWS Elastic Map Reduce(EMR) to do analysis on a 65GB dataset of Wikipedia log.
 			<br/>• Implemented code of mapper and reducer, which ran on Hadoop, to do filtering and to aggregate view counts of Wikipedia pages based on result got from EMR.
 		</h5>
