--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,6 +3,14 @@
   <h3>Projects</h3>
   <div class="panel panel-default">
     <div class="panel-body">
+    	<h5>
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="">Resource Scaling Using AWS and Azure</a></strong>
+			<br/>• Use AWS and Azure cloud APIs to programmatically control resources in response to demand.
+			<br/>• Configure and deploy a Load Balancer along with an VM Scale Set on Azure.
+			<br/>• Configure and deploy an Elastic Load Balancer along with an Auto Scaling Group on AWS.
+			<br/>• Develop solutions that manage cloud resources with the ability to deal with resource failure.
+			<br/>• Analyze the trade off between maximizing performance and reliability and the effect on cost.
+		</h5>
 		<h5>
 			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="">Big Data Analysis from Wikipedia</a></strong>
 			<br/>• Used AWS Elastic Map Reduce(EMR) to do analysis on a 65GB dataset of Wikipedia log.
